--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -51,7 +51,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Pricing</a></li>
+              <li><a href="/prices">Pricing</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
 
