--- a/app/views/index/prices.html.erb
+++ b/app/views/index/prices.html.erb
@@ -42,7 +42,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; 3rd Node Inc 2012</p>
       </footer>
 
     </div> <!-- /container -->
