basic login with Facebook!

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -52,6 +52,7 @@
 
             <form class="navbar-form pull-right">
               <div class="panel_button" style="display: visible;"><a href="#">Sign up Here</a> </div>
+              <div class="panel_button" style="display: visible;"><a href="/login">Login</a> </div>
             </form>
           </div><!--/.nav-collapse -->
         </div>
